[package]
name = "blackbox"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = { version = "0.3", features = ["compression"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
log = "0.4"
env_logger = "0.11"
strsim = "0.11"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip"] }
serial_test = "2"
